added the three api and created structure for the swagger in them
