# Video/storage/api-docs/api-docs.json
@@ -19,38 +19,28 @@
         }
     ],
     "paths": {
-        "/birthdays": {
+        "/src": {
             "get": {
                 "tags": [
-                    "Employments"
+                    "src"
                 ],
-                "summary": "Get birthdays of employmnets",
-                "description": "Returns upcoming birthdays of employments",
+                "summary": "Get all src",
+                "description": "Get all src",
                 "parameters": [
                     {
-                        "name": "company",
+                        "name": "src",
                         "in": "query",
-                        "description": "Company ID",
+                        "description": "src Id",
                         "required": true,
                         "schema": {
                             "type": "string",
-                            "example": "2719cde8-7019-4ca8-81f5-1b6057037307"
-                        }
-                    },
-                    {
-                        "name": "within",
-                        "in": "query",
-                        "description": "Comma seperated date range",
-                        "required": false,
-                        "schema": {
-                            "type": "string",
-                            "example": "2018-01-01,2018-12-31"
+                            "example": "b9fc0161-cdcc-4ecb-9b6d-91a929fcab3c"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "Successull Operation",
+                        "description": "Successfull Operation",
                         "content": {
                             "application/json": {
                                 "schema": {}
@@ -58,10 +48,13 @@
                         }
                     },
                     "400": {
-                        "description": "Bad request"
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
                     },
                     "404": {
-                        "description": "Resource Not Found"
+                        "description": "Resource not Found"
                     },
                     "500": {
                         "description": "Internal Server Error"
@@ -74,25 +67,136 @@
                 ]
             }
         },
-        "/video": {
-            "post": {
+        "/src/{id}": {
+            "put": {
                 "tags": [
-                    "Projects"
+                    "src"
                 ],
-                "summary": "Get list of projects",
-                "description": "Returns list of projects",
-                "operationId": "getProjectsList",
+                "summary": "src update",
+                "description": "Update a src",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "query",
+                        "description": "src id",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "3fdfd9a2-1a28-4fdb-a591-0e18af6feb9e"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {},
+                            "example": {
+                                "title": null
+                            }
+                        }
+                    }
+                },
                 "responses": {
-                    "200": {
-                        "description": "Successful operation"
+                    "201": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
                     },
                     "401": {
                         "description": "Unauthenticated"
                     },
-                    "403": {
-                        "description": "Forbidden"
+                    "422": {
+                        "description": "Invalid data"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "passport": []
+                    }
+                ]
+            }
+        },
+        "/video-upload": {
+            "post": {
+                "tags": [
+                    "Video Upload"
+                ],
+                "summary": "Uploading Video for the system",
+                "description": "Uploading of video ",
+                "parameters": [
+                    {
+                        "name": "video_id",
+                        "in": "query",
+                        "description": "Video ID",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "2719cde8-7019-4ca8-81f5-1b6057037307"
+                        }
+                    },
+                    {
+                        "name": "video_name",
+                        "in": "query",
+                        "description": "Video Name",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "Cenderela"
+                        }
+                    },
+                    {
+                        "name": "video_path",
+                        "in": "query",
+                        "description": "Video Path",
+                        "required": false,
+                        "schema": {
+                            "type": "string",
+                            "example": "http://www.aws.videopath1243"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {},
+                            "example": {
+                                "video_id": "8c3b36c0-44be-4a35-83ff-236140b06b7f",
+                                "video_name": "cendarela",
+                                "video_path": "http://www.aws.videopath1243"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "422": {
+                        "description": "Invalid data"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                },
+                "security": [
+                    {
+                        "passport": []
+                    }
+                ]
             }
         }
     }
